# polyglot-codebase-debugging-with-llm

./: .gitignore  CLAUDE.md  Polyglot_Debugging_Research_Progress_Report.md  README.md  ROADMAP.md  STATUS.md
docs/: conventions.md  glossary.md  publication-strategy.md  workflow.md
shared/: README.md
steps/01-empirical-characterization/: CLAUDE.md  README.md  STATUS.md  pyproject.toml
steps/01-empirical-characterization/01-github-mining/: CLAUDE.md  README.md  STATUS.md
steps/01-empirical-characterization/01-github-mining/configs/: queries.yaml
steps/01-empirical-characterization/01-github-mining/data/processed/: repos.jsonl
steps/01-empirical-characterization/01-github-mining/output/: rejected.jsonl  repo-summary.md
steps/01-empirical-characterization/01-github-mining/scripts/: README.md  enrich_repos.py  filter_repos.py  search_repos.py  summarize.py
steps/01-empirical-characterization/02-bug-extraction/: CLAUDE.md  README.md  STATUS.md  annotation-guide.md  taxonomy.md
steps/01-empirical-characterization/02-bug-extraction/data/processed/: batch-1-selection.jsonl  batch-2-selection.jsonl  bugs.jsonl  candidates-2026-07-08.jsonl  skipped.jsonl
steps/01-empirical-characterization/02-bug-extraction/output/: bug-stats.md
steps/01-empirical-characterization/02-bug-extraction/scripts/: bug_stats.py  classify_prs.py  fetch_prs.py  triage_prs.py
steps/01-empirical-characterization/03-baseline-evaluation/: CLAUDE.md  README.md  STATUS.md
steps/01-empirical-characterization/04-workshop-paper/: CLAUDE.md  README.md  STATUS.md  outline.md
(+9 files in other folders)
